// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//protoc -I proto/ proto/bbcService.proto --go_out=plugins=grpc:proto


syntax = "proto3";

option java_multiple_files = true;
option java_package = "microAss1.BbcService/proto";
option java_outer_classname = "BbcServiceProto";

package bbcservice;

// The bbc service definition.
service BbcService {
  // Sends a greeting
  rpc getNews(NewsRequest) returns (stream NewsReply) {}

  
}

// The request message containing the user's name.
message NewsRequest {
  string name = 1;
  string minutes = 2;
  
}

// The response message containing the greetings
message NewsReply {
  string text = 1;
}
